<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RadioGroup android:id="@+id/dialog_radio_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_in"
                android:textSize="14sp"
                android:layout_marginRight="16dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_out"
                android:textSize="14sp"/>

        </LinearLayout>

    </RadioGroup>

    <Spinner android:id="@+id/dialog_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_radio_btn"
        android:layout_marginBottom="8dp"/>

    
    <EditText android:id="@+id/dialog_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_memo"
        android:textSize="12sp"
        android:textColor="#eeeeee"
        android:layout_below="@+id/dialog_dropdown"
        android:layout_marginBottom="8dp"/>

    <Button android:id="@+id/dialog_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="입출금 내역 추가"
        android:layout_below="@id/dialog_memo" />
        

</RelativeLayout>